padding fix hero text wraper

--- a/src/CSS/main/hero.css
+++ b/src/CSS/main/hero.css
@@ -25,7 +25,7 @@
 }
 .hero-wraper-text {
   max-width: 297px;
-  padding-top: 158px;
+  padding-top: 128px;
   padding-left: 50px;
   z-index: 9;
 }
